# Pacman

./: CMakeLists.txt  README.md  records.txt
include/: game.h  map.h  menu.h  move.h  smart.h
resources/: rb.avif  rb.xmp
src/: game.c  main.c  map.c  menu.c  move.c  records.txt  smart.c
